Buscar usuarios com suas lojas e cadastra-lo

--- a/src/app/user-interface/app.component.html
+++ b/src/app/user-interface/app.component.html
@@ -2,7 +2,7 @@
 <section>
   <ul>
     <li class="text" *ngFor="let item of items | async">
-      {{item.problemas}}
+      {{item.email}}
     </li>
   </ul>
 </section>
