Obter sistemas com problemas

--- a/src/app/user-interface/app.component.html
+++ b/src/app/user-interface/app.component.html
@@ -1,9 +1,12 @@
 
 <section>
+<!--  <ul>-->
+<!--    <li class="text" *ngFor="let item of items | async">-->
+<!--      {{item.id}}-->
+<!--    </li>-->
+<!--  </ul>-->
   <ul>
-    <li class="text" *ngFor="let item of items | async">
-      {{item.id}}
-    </li>
+    <li *ngFor="let item of teste">{{item.problemas[0].nomeProblema}}</li>
   </ul>
 </section>
 
