--- a/src/app/user-interface/app.component.html
+++ b/src/app/user-interface/app.component.html
@@ -5,9 +5,10 @@
 <!--      {{item.id}}-->
 <!--    </li>-->
 <!--  </ul>-->
-  <ul>
-    <li *ngFor="let item of teste">{{item.problemas[0].nomeProblema}}</li>
-  </ul>
+<!--  <ul>-->
+<!--    <li *ngFor="let item of teste">{{item.problemas[0].nomeProblema}}</li>-->
+<!--  </ul>-->
+  <p>{{aux}}</p>
 </section>
 
 
