--- a/src/app/user-interface/app.component.html
+++ b/src/app/user-interface/app.component.html
@@ -1,14 +1,15 @@
 
 <section>
-<!--  <ul>-->
-<!--    <li class="text" *ngFor="let item of items | async">-->
-<!--      {{item.id}}-->
-<!--    </li>-->
-<!--  </ul>-->
+  <ul>
+    <li class="text" *ngFor="let item of teste | async">
+      {{item.nome}}
+    </li>
+  </ul>
 <!--  <ul>-->
 <!--    <li *ngFor="let item of teste">{{item.problemas[0].nomeProblema}}</li>-->
 <!--  </ul>-->
-  <p>{{aux}}</p>
+  <button (click)="clicar()">Próximo</button>
+
 </section>
 
 
