paginação do usuario e de seus chamados

--- a/src/app/user-interface/app.component.html
+++ b/src/app/user-interface/app.component.html
@@ -1,14 +1,15 @@
 
 <section>
-  <ul>
-    <li class="text" *ngFor="let item of teste | async">
-      {{item.nome}}
-    </li>
-  </ul>
+<!--  <ul>-->
+<!--    <li class="text" *ngFor="let item of testing">-->
+<!--      {{item}}-->
+<!--    </li>-->
+<!--  </ul>-->
 <!--  <ul>-->
 <!--    <li *ngFor="let item of teste">{{item.problemas[0].nomeProblema}}</li>-->
 <!--  </ul>-->
-  <button (click)="clicar()">Próximo</button>
+  <button (click)="proximosChamado()">Próximo</button>
+  <button (click)="voltarChamados()">Anterior</button>
 
 </section>
 
